# term-width-example

./: Cargo.toml  README.md  testcases.sh
src/: draw.rs  main.rs  term.rs
src/wcwidths/: mod.rs  widecharwidth.rs
