[package]
name = "term-width-blog-example"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"
license = "CC0"
[features]
box_drawing = []

[dependencies]
libc = "0.2"
unicode-segmentation = "1.6"
unicode-width = "0.1"
unic-emoji-char = "0.9"
unicode-normalization = "0.1"
argh = "0.1"
